<resources>
    <string name="app_name">WeatherApp</string>
    <string name="splash_message">Carregando...</string>
    <string name="search">Obter Previsão</string>
    <string name="enter_city">Digite a cidade</string>
    <string name="weather_report">Relatório de previsão</string>
    <string name="temp_max">Temperatura máx:</string>
    <string name="temp_min">Temperatura mín:</string>
    <string name="feels_like">Sensação térmica:</string>
    <string name="wind_speed">Velocidade do vento:</string>
    <string name="humidity">Humidade do ar:</string>

    <!-- Error messages -->
    <string name="error_empty_city">Por favor, digite o nome de uma cidade</string>
    <string name="error_city_not_found">Cidade não encontrada. Verifique o nome e tente novamente</string>
    <string name="error_no_internet">Sem conexão com a internet. Verifique sua conexão</string>
    <string name="error_timeout">Tempo esgotado. Verifique sua conexão e tente novamente</string>
    <string name="error_server">Erro no servidor. Tente novamente mais tarde</string>
    <string name="error_generic">Erro ao buscar dados. Tente novamente</string>
    <string name="loading">Carregando dados...</string>
    <string name="error_invalid_data">Dados inválidos recebidos do servidor</string>

    <!-- Layout strings -->
    <string name="search_forecast">Buscar Previsão</string>
    <string name="weather_icon">Ícone do clima</string>
    <string name="details">Detalhes</string>
    <string name="max_temp">Máx</string>
    <string name="min_temp">Mín</string>
    <string name="feels_like_short">Sensação</string>
    <string name="humidity_short">Umidade</string>
    <string name="wind_short">Vento</string>
</resources>
